--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Lumina",
+    "name": "Lumina AI",
     "slug": "lumina",
     "version": "0.1.0",
     "orientation": "portrait",
